# grant_finder

./: .env.example  .gitignore  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: cache.py  clients.py  config.py  schemas.py  scoring.py  server.py  telemetry.py
backend/app/pipeline/: advise.py  ingest.py  orchestrator.py  profile.py  score.py  search.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
